--- a/app/StardewTP/Farmer/routing.yaml
+++ b/app/StardewTP/Farmer/routing.yaml
@@ -17,3 +17,7 @@ trade:
             route: /{trade:int}/delete
             controller: Farmer:TradeController
             method: delete
+        purchase_trade:
+            route: /{trade:int}/purchase
+            controller: Farmer:TradeController
+            method: purchaseTrade
