--- a/app/StardewTP/API/routing.yaml
+++ b/app/StardewTP/API/routing.yaml
@@ -24,3 +24,17 @@ api:
             controller: API:FarmerController
             method: getFarmers
 
+partner:
+    type: group
+    route: /partners
+    routes: 
+        new_contract: 
+            route: /{partner:int}/new_contract
+            controller: Admin:PartnerController
+            method: newContract
+        edit: 
+            route: /{partner:int}/edit
+            controller: Admin:PartnerController
+            method: newContract
+
+
