--- a/config/routing.yaml
+++ b/config/routing.yaml
@@ -21,7 +21,13 @@ font:
     methods: [get, post]
 
 asset:
-    route: /asset/{filename:string}
+    route: /assets/{filename:string}
+    controller: Common:ResourceController
+    method: getAsset
+    methods: [get, post]
+
+logo:
+    route: /assets/logos/{filename:string}
     controller: Common:ResourceController
     method: getAsset
     methods: [get, post]
