--- a/app/SVX/Admin/Resources/forms/partner/new_contract.yaml
+++ b/app/SVX/Admin/Resources/forms/partner/new_contract.yaml
@@ -18,8 +18,28 @@ new_contract:
                 rows: 8
                 placeholder: Description
         payout:
-            type: text
+            type: number
             attributes: 
                 id: payout
                 class: form-control
                 placeholder: Payout
+                min: 1000
+        total_orders:
+            type: number
+            attributes:
+                id: total_orders
+                class: form-control
+                placeholder: Orders
+                value: 1
+            map: totalOrders
+        items:
+            targetEntity: ContractItem
+            fields:
+                item:
+                    type: select
+                quantity: 
+                    type: number
+                quality: 
+                    type: select
+                    attributes:
+                        options: [Bronze, Silver, Gold]
